--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
 
     <br><br><br>
     <div>
+    <h3>Preparation for the workshop</h3>
+    Install:
+       <ul>
+          <li>R and RStudio</li>
+          <li>the R library papaja</li>
+          <li><a href="https://git-scm.com/">github</a></li>
+          </ul>
+
+
+
     <h3>Workshop materials</h3>
         <ul>
           <li>slides</li>
