edited index file

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 
     <h3>Workshop materials</h3>
         <ul>
-          <li>slides</li>
-          <li>data and code</li>
-          <li>additional readings</li>
+          <li><a href="https://github.com/vasishth/MPILeipzig2019/blob/master/Workshop/slides/MPILeipzigWorkshop.pdf">slides (main presentation)</a></li>
+          <li><a href="https://github.com/vasishth/MPILeipzig2019/blob/master/Workshop/slides/PreregSlides/PreregSlides.pdf">slides (pre-registration)</a></li>
+          <li><a href="https://github.com/vasishth/MPILeipzig2019/tree/master/Workshop/readings">readings</a></li>
           </ul>
 </div>
 
@@ -62,8 +62,7 @@
     <div>
     <h3>Hands-on session materials</h3>
         <ul>
-          <li>slides</li>
-          <li>data and code</li>
+          <li><a href="">handout</a></li>
           <li>additional readings</li>
           </ul>
 </div>
