edited main page

--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
     <div>
     <h3>Hands-on session materials</h3>
         <ul>
-          <li><a href="">handout</a></li>
-          <li>additional readings</li>
+          <li><a href="https://github.com/vasishth/MPILeipzig2019/blob/master/HandsOnSession/docs/HandsOnSession.pdf">handout</a></li>
           </ul>
 </div>
 
