--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>The Fourth Summer School on Statistical Methods for Linguistics and Psychology</title>
+  <title>MPI Leipzig workshop and hands-on session</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
