ediited home page

--- a/index.html
+++ b/index.html
@@ -33,6 +33,24 @@
   <div class="container">
     <h4>Workshop and hands-on session materials for the MPI Leipzig workshop on Nov 14-15, 2019.</h4>
 
+
+A recent analysis of publicly released data accompanying published papers in Cognition showed that not all published numbers could be reproduced, even though the data and code were available (<a href="https://royalsocietypublishing.org/doi/full/10.1098/rsos.180448"</a>see here</a>). The authors state that: "...suboptimal data curation, unclear analysis specification and reporting errors can impede analytic reproducibility, undermining the utility of data sharing and the credibility of scientific findings."
+
+In this workshop, I will suggest one way to minimize the chances of producing irreproducible results, focusing on a repeated measures two-condition design as a case study. 
+
+The steps I will discuss are:
+<ol>
+<li> Experiment design, and planning sample size using simulated data</li>
+<li>Defining the analysis plan using simulated data</li> 
+<li>Checking that your experiment software actually collects the data you need</li>
+<li>Once data are collected, visualizing and summarizing the data</li>
+<li>Creating an R package to document and release your data and analyses</li>
+<li>Code refactoring</li>
+<li>Integrating the data analysis into the manuscript</li>
+<li>Releasing data and code: a suggested checklist</li>
+</ol>
+
+
     Download everything from <a href="https://github.com/vasishth/MPILeipzig2019/archive/master.zip">here</a>.
 
     <div class="row">
@@ -55,12 +73,17 @@
           <li><a href="https://github.com/vasishth/MPILeipzig2019/blob/master/Workshop/slides/MPILeipzigWorkshop.pdf">slides (main presentation)</a></li>
           <li><a href="https://github.com/vasishth/MPILeipzig2019/blob/master/Workshop/slides/PreregSlides/PreregSlides.pdf">slides (pre-registration)</a></li>
           <li><a href="https://github.com/vasishth/MPILeipzig2019/tree/master/Workshop/readings">readings</a></li>
+          <li>Notes by <a href="https://github.com/rlbarter/reproducibility-workflow">Rebecca Barter</a></li>
           </ul>
 </div>
 
     <br><br><br>
     <div>
     <h3>Hands-on session materials</h3>
+
+In this hands-on session, I will demonstrate a workflow for storing, analyzing, and maintaining data and code associated with a published paper. One major practical problem with conducting open science is how to provide the materials to one's audience (this could be just one's PhD advisor, or the wider scientific community) in a way that they can actually use and evaluate the author's work. We will develop practical skills in using tools like knitr, R Markdown, LaTeX, and GitHub, and learn to avoid common pitfalls and problems when managing the workflow for releasing data publicly. If there is time, I will also discuss the workflow and protocols that I follow when I discover mistakes, problems, and/or outright errors in other researchers' data.  
+
+
         <ul>
           <li><a href="https://github.com/vasishth/MPILeipzig2019/blob/master/HandsOnSession/docs/HandsOnSession.pdf">handout</a></li>
           </ul>
