added ref for packages

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ The steps I will discuss are:
           <li><a href="https://github.com/vasishth/MPILeipzig2019/blob/master/Workshop/slides/PreregSlides/PreregSlides.pdf">slides (pre-registration)</a></li>
           <li><a href="https://github.com/vasishth/MPILeipzig2019/tree/master/Workshop/readings">readings</a></li>
           <li>Notes by <a href="https://github.com/rlbarter/reproducibility-workflow">Rebecca Barter</a></li>
+          <li><a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0212390">Facilitating reproducible project management and manuscript development in team science: The projects R package</a></li>
           </ul>
 </div>
 
